# ozzyl-tools

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  bootstrap_source.py  compose.yaml  gunicorn.conf.py  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.agents/: product-marketing-context.md
.bootstrap/: part-00  part-01  part-02  part-03  part-04  part-05
.github/workflows/: bootstrap.yml  ci.yml  hydrate-ozzyl-tools.yml
app/: __init__.py  advanced_tools.py  catalog.py  config.py  data_tools.py  directory_routes.py  extensions.py  finance_tools.py  growth_tools.py  guide_catalog.py  guide_routes.py  halal_catalog.py  models.py  pdf_convert.py  pdf_lab.py  pdf_markup.py  pdf_tools.py  routes.py  seo_tools.py  tool_directory.py  utility_tools.py  word_tools.py
app/templates/: about.html  advanced-calculator.html  base.html  calculator.html  data-tool.html  document.html  finance-tool.html  growth-tool.html  guide-detail.html  guides-index.html  home.html  invoice.html  legal.html  (+12 more)
migrations/: env.py
ops/: ozzyl-tools-deploy-watch.service  ozzyl-tools-deploy-watch.timer
scripts/: deploy-vps.sh  deploy-watch.sh
tests/: conftest.py  test_advanced_calculators.py  test_app.py  test_config.py  test_conversion_finance_tools.py  test_data_tools.py  test_deploy_config.py  test_guides.py  test_markup_growth_tools.py  test_models.py  test_next_improvements.py  test_pdf_tools.py  test_routes.py  test_seo_tools.py  test_tool_directory.py  test_ui_polish.py  test_utility_tools.py
(+75 files in other folders)
