[project]
name = "ozzyl-tools"
version = "0.2.0"
description = "Flask-native business calculators and document workflow tools."
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q --strict-markers --disable-warnings"

[tool.ruff]
target-version = "py313"
line-length = 100
extend-exclude = [".venv", "migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.coverage.run]
branch = true
source = ["app"]
omit = ["app/templates/*", "app/static/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75
